--- a/bio-page/index.html
+++ b/bio-page/index.html
@@ -5,24 +5,68 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="./styles/global.css" />
+		<script src="https://kit.fontawesome.com/69e587e431.js" crossorigin="anonymous"></script>
 		<title>Robertonto</title>
 	</head>
 	<body>
 		<header>
-			<h2>Robertonto</h2>
+			<h1 class="left-side">Robertonto ☕</h1>
+			<h1 class="right-side hidden">Roberto 👜</h1>
 		</header>
 
-		<div class="right-button"></div>
-		<div class="left-button"></div>
+		<button type="button" aria-label="Right arrow" onclick="" class="right-button">
+			<div class="arrow-button-face">
+				<i class="fa-solid fa-chevron-right"></i>
+			</div>
+		</button>
+		<button type="button" aria-label="Left arrow" onclick="" class="left-button hidden">
+			<div class="arrow-button-face">
+				<i class="fa-solid fa-chevron-left"></i>
+			</div>
+		</button>
 
 		<main>
 			<section class="left-side">
-				<img src="./assets/left-me.jpg" alt="Me and my grandma" />
-				<div></div>
+				<img src="./assets/left-me.jpeg" alt="Me and my grandma" />
+				<span class="glow"></span>
+				<div class="container">
+					<div class="greetings">
+						<h2>Tudo bem?</h2>
+						<span class="subheader">Que tal uma conversa?</span>
+					</div>
+
+					<button class="green" type="button" onclick="window.open('https://web.whatsapp.com/send?phone=5561983025990')" aria-label="Discord button">
+						<div class="button-face">
+							<i class="fa-brands fa-whatsapp"></i>
+							<span>Manda um oi!</span>
+						</div>
+					</button>
+					<p class="separator">ou aqui</p>
+
+					<div class="button-holder">
+						<button type="button" onclick="window.open('https://discord.com/users/262736936546992130')" aria-label="Discord button">
+							<div class="button-face">
+								<i class="fa-brands fa-discord"></i>
+							</div>
+						</button>
+						<button class="pink" type="button" onclick="window.open('https://instagram.com/gabriel.rqueiroz')" aria-label="Discord button">
+							<div class="button-face">
+								<i class="fa-brands fa-instagram"></i>
+							</div>
+						</button>
+						<button class="black" type="button" onclick="window.open('https://steamcommunity.com/id/coffeey/')" aria-label="Discord button">
+							<div class="button-face">
+								<i class="fa-brands fa-steam"></i>
+							</div>
+						</button>
+					</div>
+				</div>
 			</section>
 			<section class="right-side">
-				<div></div>
-				<img src="./assets/right-me.jpg" alt="Me and myself" />
+				<div class="container">
+					<h2>Seguro</h2>
+				</div>
+				<img src="./assets/right-me.jpeg" alt="Me and myself" />
 			</section>
 		</main>
 	</body>
