✨ feat(CJR): Changed emoji
The right emoji was changed to make it more funny :)

Kinda useless though

--- a/bio-page/index.html
+++ b/bio-page/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<h1 class="left-side">Robertonto ☕</h1>
-			<h1 class="right-side hidden">Roberto 👜</h1>
+			<h1 class="right-side hidden">O Roberto 😎</h1>
 		</header>
 
 		<button type="button" aria-label="Right arrow" onclick="" class="right-button">
@@ -35,7 +35,12 @@
 						<span class="subheader">Que tal uma conversa?</span>
 					</div>
 
-					<button class="green" type="button" onclick="window.open('https://web.whatsapp.com/send?phone=5561983025990')" aria-label="Discord button">
+					<button
+						class="green"
+						type="button"
+						onclick="window.open('https://web.whatsapp.com/send?phone=5561983025990')"
+						aria-label="Discord button"
+					>
 						<div class="button-face">
 							<i class="fa-brands fa-whatsapp"></i>
 							<span>Manda um oi!</span>
@@ -44,17 +49,31 @@
 					<p class="separator">ou aqui</p>
 
 					<div class="button-holder">
-						<button type="button" onclick="window.open('https://discord.com/users/262736936546992130')" aria-label="Discord button">
+						<button
+							type="button"
+							onclick="window.open('https://discord.com/users/262736936546992130')"
+							aria-label="Discord button"
+						>
 							<div class="button-face">
 								<i class="fa-brands fa-discord"></i>
 							</div>
 						</button>
-						<button class="pink" type="button" onclick="window.open('https://instagram.com/gabriel.rqueiroz')" aria-label="Discord button">
+						<button
+							class="pink"
+							type="button"
+							onclick="window.open('https://instagram.com/gabriel.rqueiroz')"
+							aria-label="Discord button"
+						>
 							<div class="button-face">
 								<i class="fa-brands fa-instagram"></i>
 							</div>
 						</button>
-						<button class="black" type="button" onclick="window.open('https://steamcommunity.com/id/coffeey/')" aria-label="Discord button">
+						<button
+							class="black"
+							type="button"
+							onclick="window.open('https://steamcommunity.com/id/coffeey/')"
+							aria-label="Discord button"
+						>
 							<div class="button-face">
 								<i class="fa-brands fa-steam"></i>
 							</div>
